Fixed issue with cookies being to large by adding a separate cookie for each level; added capability to resize/shift graph in editor

--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ table.controls th {
 .gameBackButton:active {
     background-color: #cfc;
 }
+.gameBackButton.finished {
+    background-color: #8f8;
+    box-shadow: 0px 0px 10px #8f8;
+}
 h1 {
     text-align: center;
     font-size: 50px;
